[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/camera_systems/level_camera/state_machine/states/follow_player.gd" type="Script" id=1]
[ext_resource path="res://src/camera_systems/level_camera/level_cam_sys.gd" type="Script" id=2]
[ext_resource path="res://src/camera_systems/level_camera/state_machine/states/follow_player_aiming.gd" type="Script" id=3]
[ext_resource path="res://src/camera_systems/camera_shake/camera_trauma_detector.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/camera_systems/camera_shake/shakeable_clipped_camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/generic/state_machine/state_machine.gd" type="Script" id=6]

[sub_resource type="SphereShape" id=1]
radius = 2.0

[node name="LevelCameraSystem" type="Spatial"]
script = ExtResource( 2 )

[node name="AnchorY" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.6, 0 )

[node name="CameraTraumaDetector" parent="AnchorY" instance=ExtResource( 4 )]
_camera_node_path = NodePath("../AnchorX/ShakeableClippedCamera")

[node name="CollisionShape" type="CollisionShape" parent="AnchorY/CameraTraumaDetector"]
shape = SubResource( 1 )

[node name="AnchorX" type="Spatial" parent="AnchorY"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )

[node name="ShakeableClippedCamera" parent="AnchorY/AnchorX" instance=ExtResource( 5 )]
transform = Transform( 0.999951, 0, 0.00983242, 0, 1, 0, -0.00983242, 0, 0.999951, -2.98023e-08, 0, 1.7 )
_max_shake_rotation = Vector3( 6, 4, 6 )

[node name="RayCast" type="RayCast" parent="AnchorY/AnchorX/ShakeableClippedCamera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )
collision_mask = 5
debug_shape_custom_color = Color( 0.898039, 0, 1, 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="FollowPlayer" type="Node" parent="StateMachine"]
script = ExtResource( 1 )
_anchor_offset = Vector3( 0.35, 1.55, 0 )
_camera_offset = Vector3( 0, 0, 1.3 )
_pitch_limits = Vector2( -0.95, 0.7 )
_follow_smoothing = 0.6

[node name="FollowPlayerAiming" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
_anchor_offset = Vector3( 0.35, 1.55, 0 )
_camera_offset = Vector3( 0, 0, 0.4 )
_pitch_limits = Vector2( -0.95, 0.7 )
_follow_smoothing = 0.7
